Fri Apr  4 22:37:39 2003  Joern Thyssen  <jth@gnubg.org>

	Fix number of chequers off for hypergammon.

	* drawboard.c (DrawBoard), gtkboard.c (game_set): new parameter:
	number of chequers. Changed all callers.

Fri Apr  4 22:10:04 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): bug fix: handle resignations
	correctly.
	(reported by mjan)

Fri Apr  4 22:02:00 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (printHTMLBoardGNU): fix bug: dice were printed
	on the wrong side of the board when fClockwise=1.
	(reported by Ian Shaw and Achim Mueller)
	

Fri Apr  4 20:45:16 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (RolloutGeneral): SanityCheck only works for 
	standard backgammon.

Fri Apr  4 20:21:45 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSnowieTxt): do not strip white space
	(reported by Michael Depreli)

Thu Apr  3 22:30:00 2003  Joern Thyssen  <jth@gnubg.org>

	* makehyper.c: new file
	* Makefile.am: updated with the program.

Thu Apr  3 22:06:56 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (OptionsPages): move dice manipulation options to the
	dice page.

Thu Apr  3 22:01:00 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvaluatePositionCubeful4): use money game cube efficiency
	for match play for bearoffs.

Thu Apr  3 21:56:42 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: reverse the order in which pip counts are reported.
	(suggested by Michael Depreli)

Wed Apr  2 22:46:49 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (BasicCubefulRollout): fix bug in calculating
	cubeful equity when doing exact bearoff truncation for money
	game rollouts.

Tue Apr  1 18:16:03 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (OptionsSet): missing initialisation of the 
	cheat-roll menues.
	(reported by Nardy Pillards)

Mon Mar 31 21:50:51 2003  Joern Thyssen  <jth@gnubg.org>

	Restore "export position gammonline ..." to the previous
	version, but write new "export position gol2clipboard" for
	inserting html on clipboard.