@@ -1,3 +1,8 @@
+Sat Apr  5 14:57:18 2003  Joern Thyssen  <jth@gnubg.org>
+
+	play.c (TryBearoff): no auto-bearoff for hypergammon positions
+	with contact.
+
 Fri Apr  4 22:37:39 2003  Joern Thyssen  <jth@gnubg.org>
 
 	Fix number of chequers off for hypergammon.
